[gd_scene load_steps=2 format=3 uid="uid://c2h34yf52xl1f"]

[ext_resource type="Script" uid="uid://bdtk03o6dv5d" path="res://addons/quest_weaver/ui/node_properties/backdrop_node_editor.gd" id="1_n00xk"]

[node name="BackdropNodeEditor" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_n00xk")

[node name="ColorPicker" type="ColorPickerButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
color = Color(0.466667, 0.6, 0.266667, 0.2)

[node name="TitleEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Backdrop Title"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Title Size: "

[node name="FontSizeSlider" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 10.0
max_value = 64.0
value = 16.0
rounded = true

[node name="FontSizeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
